<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/menu_24px"
                app:title="@string/title_project_editor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="?attr/colorSurface"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/toolRec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </LinearLayout>
            
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable"/>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <io.github.rosemoe.sora.widget.CodeEditor
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/error_message"/>
                
            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:background="#20FF0000"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/symbolRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:orientation="horizontal" />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?android:attr/windowBackground"
        android:elevation="16dp"
        android:orientation="vertical">
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/title_project_files"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>

            <ImageView
                android:id="@+id/btn_new_file"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/add_24px"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_new_file"
                app:tint="?attr/colorControlNormal"/>

            <ImageView
                android:id="@+id/btn_new_folder"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/folder"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_new_folder"
                app:tint="?attr/colorControlNormal"/>

        </LinearLayout>
            
        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/file_list_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
